[package]
name = "journal"
version = "0.1.0"
authors = ["Rob <polygonhell@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units=1
lto=true
debug-assertions=false
debug=false
rpath = false

[dependencies]
memmap = "0.7"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
