[package]
name = "journal"
version = "0.1.0"
authors = ["Rob <polygonhell@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug=true

[profile.bench]
opt-level = 3
codegen-units=1
lto=true
debug-assertions=false
debug=false
rpath = false

[profile.release]
opt-level = 3
codegen-units=1
lto=true
debug-assertions=false
debug=false
rpath = false

[dependencies]
fnv = "1.0"
memmap = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# mmap-fixed = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
